--- a/src/components/ProductCard/index.css
+++ b/src/components/ProductCard/index.css
@@ -9,6 +9,9 @@
   flex-shrink: 1;
   margin-right: 20px;
 }
+.link-item {
+  text-decoration: none;
+}
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .product-item {
