--- a/src/components/ProductItemDetails/index.css
+++ b/src/components/ProductItemDetails/index.css
@@ -1,1 +1,105 @@
-/* Write your CSS here */
+.product-details-success-view {
+  max-width: 100vw;
+  min-height: 100vh;
+  padding-left: 5vw;
+  padding-right: 5vw;
+}
+.product-image {
+  width: 40vw;
+  border: none;
+  border-radius: 10px;
+  margin-left: 0;
+}
+.product-name {
+  color: #1e293b;
+  font-size: 4vw;
+  margin-top: 0;
+}
+.product {
+  max-width: 40vw;
+  margin-left: 4vw;
+}
+.product-details-container {
+  max-width: 100vw;
+  display: flex;
+  align-items: center;
+}
+.price-details {
+  color: #171f46;
+  font-weight: bold;
+  font-size: 1.6vw;
+}
+.rating-and-reviews-count {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  height: 5vh;
+}
+.reviews-count {
+  color: #12022f;
+  margin-left: 1.5vw;
+}
+.product-description {
+  color: #475569;
+  font-size: 1.3vw;
+}
+.label-value-container {
+  display: flex;
+  align-items: center;
+}
+.label {
+  color: #171f46;
+  font-weight: bold;
+  font-size: 1.5vw;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.value {
+  color: #475569;
+  font-size: 1.5vw;
+  margin-left: 1vw;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.quantity-container {
+  display: flex;
+  align-items: center;
+}
+.quantity-controller-button {
+  border: none;
+  outline: none;
+  background-color: white;
+}
+.quantity-controller-icon {
+  height: 5vh;
+  width: 1.5vw;
+}
+.quantity {
+  color: #475569;
+  font-size: 1.6vw;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.add-to-cart-btn {
+  color: white;
+  background-color: #3b82f6;
+  font-size: 1.4vw;
+  border: none;
+  outline: none;
+  padding: 8px;
+  border-radius: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.similar-products-heading {
+  color: #1e293b;
+  font-size: 2.5vw;
+}
+.similar-products-list {
+  display: flex;
+  width: 100%;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-left: 0;
+  padding: 0;
+}
