--- a/src/components/ProductSpecificDetails/index.css
+++ b/src/components/ProductSpecificDetails/index.css
@@ -1,3 +1,10 @@
+.products-details-loader-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .product-details-success-view {
   max-width: 100vw;
   min-height: 100vh;
